package com.example.swasthyamitra.models

data class DailyActivity(
    val date: String = "",
    val steps: Int = 0,
    val calories: Int = 0,
    val workout: String = ""
)
