package com.example.swasthyamitra.models

/**
 * Represents a recommendation generated by the Cloud Functions.
 * This model maps to documents in the 'recommendations' Firestore collection.
 */
data class Recommendation(
    val documentId: String = "",
    val userId: String = "",
    val type: String = "",  // "Meal_Suggestion", "Macro_Alert", "Daily_Plan"
    val mealTime: String = "",  // "Breakfast", "Lunch", "Dinner", "Snack", "Anytime"
    val suggestedFoods: List<SuggestedFood> = emptyList(),
    val remainingCalories: Int = 0,
    val message: String = "",
    val createdAt: Long = 0L,
    val status: String = "Pending"  // "Pending", "Accepted", "Dismissed", "Consumed"
)

/**
 * Represents a single food suggestion within a recommendation.
 */
data class SuggestedFood(
    val name: String = "",
    val calories: Int = 0,
    val protein: Double = 0.0,
    val carbs: Double = 0.0,
    val fat: Double = 0.0,
    val servingSize: String = "1 serving",
    val reason: String = ""
)
